[package]
name = "job-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.136"
serde_json = "1.0.78"
thiserror = "1.0.30"

[dependencies.rocket]
# Using Release Candidate since it introduces the ability to compile using stable Rust
version = "0.5.0-rc.1"
features = ["json", "uuid"]
